--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: fitflow
 description: "AI-Powered Fitness & Wellness App for office workers and college students."
 
-publish_to: 'none' 
+publish_to: 'none'
 
 version: 1.0.0+1
 
@@ -46,7 +46,8 @@ dependencies:
   url_launcher: ^6.2.2
   path_provider: ^2.1.1
   permission_handler: ^11.1.0
-  
+  google_generative_ai: ^0.4.6
+
   # In-app purchases
   in_app_purchase: ^3.1.11
   
